v0.23.7
- WriteR() goes live. Does not make use of everything yet though.
- updated some of the vignette files

v0.23.6
- reinstated use of a local file for local settings
- Added creation of "MyBrailleR" folder for user preferences and files. This only happens if the user agrees otherwise a temporary folder is created Code suggestions and comments from Henrik Bengtsson.
- settings files will be copied to the user folder if needed.
- fixed case sensitive typo in BrailleROptions settings file for BrailleR.Embosser
- SaveMySettings() and RestoreMySettings() functions now redundant; removed as they were never released publicly.
- introduced use of normalizePath(). Thanks to Henrik Bengtsson.
- made some changes to replace cat() with message(). Suggestion from Henrik Bengtsson. (might be more of them to fix.)
- added creation of Readme.txt file in the MyBrailleR folder which contains the date and the version of BrailleR being used.
- New version of WriteR 0.160105.3
- established GitHub repository at ajrgodfrey/BrailleR


v0.23.5
- Implemented use of local settings stored in .BrailleROptions object (hidden)
- There is now  a set of defaults that can be restored in addition to the currently active set of preferences in the BrailleROptions file within the package.
- SaveMySettings() and RestoreMySettings() functions created for obvious outcomes. These are needed to protec from losing settings when the package is updated.
- A wrapper for WriteR is now included.
- MakeAllFormats() added to create pandoc settings files based on the foo.pandoc file in the inst folder.
- What's this figure? function WTF() now incorporated.
- added necessary import of grid package

v0.23.4
- changed preferences to use local options files. Removed PREFERENCES from Inst folder.

v0.23.3
- added fitted line plot to OnePredictor().
- altered tables to wide format instead of long where only one set of results given by UniDesc()